# anvil

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Makefile  config-script.sh  makefile  pyrightconfig.json  requirements.txt  setup-script.sh
cmake/: CompilerStandards.cmake  Functions.cmake
docs/design-specification/: design-specification.aux  design-specification.blg  design-specification.toc
docs/design-specification/00-DocumentSettings/: Definitions.tex  Preamble.tex
docs/design-specification/02-Body/: Body.tex  Introduction.tex  Memory-Safety.tex  Program.tex
include/memory/: constants.h  constants.hpp  dynamic_allocator.h  error.h  error.hpp  pool_allocator.h  pool_allocator.hpp  scratch_allocator.h  scratch_allocator.hpp  stack_allocator.h  stack_allocator.hpp  transfer.hpp
libs/memory/: CMakeLists.txt
libs/memory/benchmarking/: scratch_allocator_benchmark.cpp
libs/memory/bindings/: memory_bindings.cpp
libs/memory/src/: dynamic_allocator.c  error.c  error.cpp  error.h  memory_allocation.c  memory_allocation.cpp  pool_allocator.c  pool_allocator.cpp  scratch_allocator.c  scratch_allocator.cpp  stack_allocator.c  stack_allocator.cpp  utility.c  utility.cpp
libs/memory/src/internal/: error.h  memory_allocation.h  memory_allocation.hpp  utility.h  utility.hpp
libs/memory/tests/: anvil_memory.pyi  conftest.py  scratch_allocator_test.py  stack_allocator_test.py  test_scratch_allocator.py  test_scratch_allocator_pybind.py  test_stack_allocator_pybind.py
